--- a/css/main.css
+++ b/css/main.css
@@ -374,7 +374,7 @@ button {
     margin-bottom: 50px;
 }
 
-.video #video {
+.video .video-frame {
     max-width: 800px;
     width: 100%;
     margin: 0 auto;
